Fixed footer alignment.

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -733,7 +733,7 @@ footer {
   padding-bottom: 30px;
   font-size: 13px;
   color: #aaa;
-  /*margin: 0 auto;*/
+  margin: 0 auto;
   text-align: center;
   width: 280px;
 }
